--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+    <title>PDF Viewer</title>
     <style>
-        #adobe-dc-view {
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        iframe {
             width: 100%;
             height: 100vh;
+            border: none;
         }
     </style>
 </head>
 <body>
-    <div id="adobe-dc-view"></div>
-    <script>
-        document.addEventListener("adobe_dc_view_sdk.ready", function () {
-            var adobeDCView = new AdobeDC.View({
-                clientId: "d2b914018aa44424a391cb146e952824",
-                divId: "adobe-dc-view"
-            });
-            adobeDCView.previewFile({
-                content: { location: { url: "https://drive.google.com/uc?export=download&id=1PbyGxajPOHvtJao_uYcjzcNokmvj7ULP" } },
-                metaData: { fileName: "MyDocument.pdf" }
-            });
-        });
-    </script>
-</body>
-</html>
+    <iframe src="https://natevisser547.github
