--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://natevisser547.github.io/pdf-viewerv2.html/V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+    <iframe src="V2%20Symptomatic%20Bradycardia.pdf"></iframe>
 </body>
 </html>
 
