--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <iframe src="V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+  <iframe src="V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+<p>Your browser may not support embedded PDFs. <a href="V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
 </body>
 </html>
 
