--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,8 +15,10 @@
     </style>
 </head>
 <body>
-  <iframe src="V2%20Symptomatic%20Bradycardia.pdf"></iframe>
-<p>Your browser may not support embedded PDFs. <a href="V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
+  <!-- Replace the URL below with the raw URL of your PDF from GitHub -->
+  <iframe src="https://raw.githubusercontent.com/username/repository/branch/path/to/V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+  
+  <p>Your browser may not support embedded PDFs. <a href="https://raw.githubusercontent.com/username/repository/branch/path/to/V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
 </body>
 </html>
 
