--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,10 +15,9 @@
     </style>
 </head>
 <body>
-  <!-- Replace the URL below with the raw URL of your PDF from GitHub -->
-  <iframe src="https://raw.githubusercontent.com/username/repository/branch/path/to/V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+  <!-- Use the raw URL of the PDF from GitHub -->
+  <iframe src="https://raw.githubusercontent.com/natevisser547/pdf-viewerv2.html/main/pdfs/V2%20Symptomatic%20Bradycardia.pdf"></iframe>
   
-  <p>Your browser may not support embedded PDFs. <a href="https://raw.githubusercontent.com/username/repository/branch/path/to/V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
+  <p>Your browser may not support embedded PDFs. <a href="https://raw.githubusercontent.com/natevisser547/pdf-viewerv2.html/main/pdfs/V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
 </body>
 </html>
-
