--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,9 +15,7 @@
     </style>
 </head>
 <body>
-  <!-- Updated raw URL for PDF -->
-  <iframe src="https://raw.githubusercontent.com/natevisser547/pdf-viewerv2.html/main/%20V2%20Symptomatic%20Bradycardia.pdf"></iframe>
-  
-  <p>Your browser may not support embedded PDFs. <a href="https://raw.githubusercontent.com/natevisser547/pdf-viewerv2.html/main/%20V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
+   <iframe src="V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+<p>Your browser may not support embedded PDFs. <a href="V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
 </body>
 </html>
