--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -15,8 +15,8 @@
     </style>
 </head>
 <body>
-    <!-- Correct GitHub Pages URL to Embed the PDF -->
-    <iframe src="https://natevisser547.github.io/pdf-viewerv2.html/V2%20Symptomatic%20Bradycardia.pdf"></iframe>
+    <!-- Using Google Docs Viewer to embed the PDF -->
+    <iframe src="https://docs.google.com/gview?url=https://natevisser547.github.io/pdf-viewerv2.html/V2%20Symptomatic%20Bradycardia.pdf&embedded=true"></iframe>
 </body>
 </html>
 
