--- a/pdf-viewerv2.html
+++ b/pdf-viewerv2.html
@@ -22,7 +22,7 @@
     <div id="pdf-container"></div>
 
     <script>
-        const url = 'https://www.dropbox.com/scl/fi/htff7smq8vkx9i4v2fi93/V2-Symptomatic-Bradycardia.pdf?raw=1';
+        const url = 'https://natevisser547.github.io/pdf-viewerv2.html/V2%20Symptomatic%20Bradycardia.pdf'; // Updated to GitHub Pages URL
 
         // Fetch and render the PDF
         pdfjsLib.getDocument(url).promise.then(function(pdf) {
@@ -42,12 +42,11 @@
             });
         });
     </script>
+
+    <p>Your browser may not support embedded PDFs. <a href="https://natevisser547.github.io/pdf-viewerv2.html/V2%20Symptomatic%20Bradycardia.pdf" download>Click here to download the PDF.</a></p>
 </body>
 </html>
 
-    <p>Your browser may not support embedded PDFs. <a href="https://www.dropbox.com/scl/fi/htff7smq8vkx9i4v2fi93/V2-Symptomatic-Bradycardia.pdf?raw=1" download>Click here to download the PDF.</a></p>
-</body>
-</html>
 
 
 
